custom_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-data-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokemon-data-viz
  template:
    metadata:
      labels:
        app: pokemon-data-viz
    spec:
      containers:
      - name: web-server
        image: liupengfei99/pokemon-dataviz
        ports:
        - containerPort: 8888
        command: [ sh, -c ]
        args: [ python app.py ]
