custom_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-data-viz-service
spec:
  type: ClusterIP
  ports:
    - name: http
      # port on your pod
      targetPort: 8888
      # port of service
      port: 80
  selector:
    app: pokemon-data-viz
